# vanetizer-c--

./: CMakeLists.txt  vanetizer.kdev4
src/: CMakeLists.txt  general.xml  logger.cpp  logger.h  main.cpp  templatefile.cpp  templatefile.h
src/client/: CMakeLists.txt  configurationpage.cpp  configurationpage.h  mapmakerpage.cpp  mapmakerpage.h  navigationmenu.cpp  navigationmenu.h  xmlhelper.cpp  xmlhelper.h
src/client/widgets/: mappropertyeditor.cpp  mappropertyeditor.h  paintbrush.cpp  paintbrush.h  paintbrushform.cpp  paintbrushform.h
src/client/widgets/dialogs/: abstractpropertyform.cpp  abstractpropertyform.h  configurationdialog.cpp  configurationdialog.h  propertydialog.cpp  propertydialog.h  runresultsdialog.cpp  runresultsdialog.h  vanetareapropertyform.cpp  vanetareapropertyform.h  vanetextensionform.cpp  vanetextensionform.h  vanetgmsoutpropertyform.cpp  vanetgmsoutpropertyform.h  vanetmobilitymodelform.cpp  vanetmobilitymodelform.h  vanetnodeform.cpp  vanetnodeform.h  vanetnodegroupform.cpp  vanetnodegroupform.h  vanetroutingprotocolpropertyform.cpp  vanetroutingprotocolpropertyform.h  vanetseedpropertyform.cpp  vanetseedpropertyform.h  vanetspatialmodelpropertyform.cpp  vanetspatialmodelpropertyform.h  vanetspmodeldump.cpp  vanetspmodeldump.h  vanetsteppropertyform.cpp  vanetsteppropertyform.h  vanettimesimulationpropertyform.cpp  vanettimesimulationpropertyform.h  vanettrafficlightpropertyform.cpp  vanettrafficlightpropertyform.h
src/model/: mappropertyitemmodel.h
src/server/: CMakeLists.txt  vanetconfigurator.cpp  vanetconfigurator.h
src/server/database/: configentryentity.cpp  configentryentity.h  configurationentity.cpp  configurationentity.h  persistencemanager.cpp  persistencemanager.h
src/server/runners/: abstractconfiguration.cpp  abstractconfiguration.h  gmsconfiguration.cpp  gmsconfiguration.h  simulationoutput.cpp  simulationoutput.h  simulationrunner.cpp  simulationrunner.h  vmsconfiguration.cpp  vmsconfiguration.h
src/xml/: CMakeLists.txt  modeltoxmlconverter.cpp  modeltoxmlconverter.h  xmlhelper.cpp  xmlhelper.h  xmltomodelconverter.cpp  xmltomodelconverter.h
src/xml/property/: abstractpropertyconvertor.cpp  abstractpropertyconvertor.h  areapropertyconvertor.cpp  areapropertyconvertor.h  gmsoutpropertyconvertor.cpp  gmsoutpropertyconvertor.h
